--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <title>Arthur (Ikeagold)</title>
 <meta charset="utf-8"/>
 <style>body{height:100%;width:100%;margin:5px;padding:0;text-align:center}</style>
-<!--[if lt IE 9]><script src="/../html5shiv.js"></script><![endif]-->
+<!--[if lt IE 9]><script src='//oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.min.js'></script><![endif]-->
 <h1>Arthur (Ikeagold)</h1>
-<strong>Разработка сайтов</strong> визиток/блогов/галерей (yii,wp)
-<br/>Установка CMS (WP,OpenCart,etc.)
+<strong>Разработка сайтов</strong> визиток/блогов/галерей (yii, wordpress)
+<br/>Установка CMS (WP, OpenCart, etc.)
 <br/>SEO (поисковая оптимизация) для любых сайтов
 <br/>Поддержка сайтов/форумов(ipb)
 <br/>Разработка мобильных приложений (Andoid/iOS) с применением:
-<br/>html5, css3, js, php, node
-<br/><br/><strong>Пишите нам по адресу: test1@li.ru</strong>
+<br/>html, css, js, php, node
+<br/><br/><strong>E-mail: test1@li.ru</strong>
 <br/>
 <iframe src="https://githubbadge.appspot.com/ikeagold" style="border: 0;height: 142px;width: 200px;overflow: hidden;" frameBorder="0"></iframe>
