--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!doctype html>
-<title>Arthur (Ikeagold)</title>
+<title>Arthur (Ikeagold) Web-Developer</title>
 <meta charset="utf-8"/>
-<style>body{height:100%;width:100%;margin:5px;padding:0;text-align:center}</style>
+<style>body{height:100%;width:100%;margin:5px;padding:0;text-align:center;font-family:"Lucida Sans Unicode","Lucida Grande",sans-serif;line-height:1.6}</style>
 <!--[if lt IE 9]><script src='//oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.min.js'></script><![endif]-->
-<h1>Arthur (Ikeagold)</h1>
+<h1>Arthur (Ikeagold) Web-Developer</h1>
 <strong>Разработка сайтов</strong> визиток/блогов/галерей (yii, wordpress)
-<br/>Установка CMS (WP, OpenCart, etc.)
+<br/>Установка CMS (WP, OpenCart, и т.д.)
 <br/>SEO (поисковая оптимизация) для любых сайтов
 <br/>Поддержка сайтов/форумов(ipb)
 <br/>Разработка мобильных приложений (Andoid/iOS) с применением:
 <br/>html, css, js, php, node
-<br/><br/><strong>E-mail: test1@li.ru</strong>
-<br/>
-<iframe src="https://githubbadge.appspot.com/ikeagold" style="border: 0;height: 142px;width: 200px;overflow: hidden;" frameBorder="0"></iframe>
+<br/><br/><strong>E-mail: test1@li.ru</strong><br/><br/>
+<iframe src="http://githubbadge.appspot.com/ikeagold" style="border:0;height:142px;width:200px;overflow:hidden;" frameBorder="0"></iframe>
