--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!doctype html>
 <title>Arthur (Ikeagold) Web-Developer</title>
 <meta charset="utf-8"/>
-<style>body{height:100%;width:100%;margin:5px;padding:0;text-align:center;font-family:"Lucida Sans Unicode","Lucida Grande",sans-serif;line-height:1.6}</style>
-<!--[if lt IE 9]><script src='//oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.min.js'></script><![endif]-->
+<style>body{height:100%;width:100%;margin:5px;padding:0;text-align:center;font-family:"Lucida Sans Unicode","Lucida Grande",sans-serif;line-height:1.6}.content{text-align:left;padding-left:10%;padding-right:10%}@media screen and (max-width:980px){.content{padding-left:1%}}</style>
+<!--[if lt IE 9]><script src='//oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.min.js'></script><script src='//css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js'></script><![endif]-->
 <h1>Arthur (Ikeagold) Web-Developer</h1>
-<strong>Разработка сайтов</strong> визиток/блогов/галерей (YII, WordPress)
-<br/>Установка/настройка/доработка CMS (WordPress, OpenCart, и т.д.)
-<br/>SEO (поисковая оптимизация) для любых сайтов
-<br/>Поддержка сайтов/форумов(ipb)
-<br/>Разработка мобильных приложений (Andoid/iOS) с применением:
-<br/>html, css, js, php, node
-<br/>Применение вашего дизайна (по ТЗ или из .psd) к любому сайту (темы, шаблоны, и т.д.)
-<br/><br/><strong>E-mail: test1@li.ru</strong><br/><br/>
+<div class=content>
+	<ul>
+		<li>Разработка сайтов визиток/блогов/галерей (YII, WordPress)</li>
+		<li>Установка/настройка/доработка CMS (WordPress, OpenCart, и т.д.)</li>
+		<li>SEO (поисковая оптимизация) для любых сайтов</li>
+		<li>Поддержка сайтов/форумов(ipb)</li>
+		<li>Разработка мобильных приложений (Andoid/iOS) с применением: html, css, js, php, node</li>
+		<li>Применение вашего дизайна (по ТЗ или из .psd) к любому сайту (темы, шаблоны, и т.д.)</li>
+	</ul>
+</div>
+<strong>E-mail: test1@li.ru</strong><br/><br/>
 <iframe src="http://githubbadge.appspot.com/ikeagold" style="border:0;height:142px;width:200px;overflow:hidden;" frameBorder="0"></iframe>
