--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <title>Arthur (Ikeagold) Web-Developer</title>
-<meta charset="utf-8"/>
+<meta charset=utf-8/>
 <style>body{height:100%;width:100%;margin:5px;padding:0;text-align:center;font-family:"Lucida Sans Unicode","Lucida Grande",sans-serif;line-height:1.6}.content{text-align:left;padding-left:10%;padding-right:10%}@media screen and (max-width:980px){.content{padding-left:1%}}</style>
-<!--[if lt IE 9]><script src='//oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.min.js'></script><script src='//css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js'></script><![endif]-->
+<!--[if lt IE 9]><script src='//cdn.jsdelivr.net/html5shiv/3.7.0/html5shiv.min.js'></script><![endif]-->
 <h1>Arthur (Ikeagold) Web-Developer</h1>
 <div class=content>
 	<ul>
@@ -15,4 +15,4 @@
 	</ul>
 </div>
 <strong>E-mail: test1@li.ru</strong><br/><br/>
-<iframe src="http://githubbadge.appspot.com/ikeagold" style="border:0;height:142px;width:200px;overflow:hidden;" frameBorder="0"></iframe>
+<iframe src='http://githubbadge.appspot.com/ikeagold' style='border:0;height:142px;width:200px;overflow:hidden;' frameBorder='0'></iframe>
