--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!doctype html>
 <title>Arthur (Ikeagold) Web-Developer</title>
 <meta charset=utf-8/>
-<style>body{height:100%;width:100%;margin:5px;padding:0;text-align:center;font-family:"Lucida Sans Unicode","Lucida Grande",sans-serif;line-height:1.6}.content{text-align:left;padding-left:10%;padding-right:10%}@media screen and (max-width:980px){.content{padding-left:1%}}</style>
+<meta name=viewport content='width=device-width, initial-scale=1.0' />
+<style>body{text-align:center;font-family:"Lucida Sans Unicode","Lucida Grande",sans-serif;line-height:1.6}.content{text-align:left;padding:7%;}</style>
 <!--[if lt IE 9]><script src='//cdn.jsdelivr.net/html5shiv/3.7.0/html5shiv.min.js'></script><![endif]-->
 <h1>Arthur (Ikeagold) Web-Developer</h1>
 <div class=content>
