--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 <style>body{text-align:center;font-family:"Lucida Sans Unicode","Lucida Grande",sans-serif;line-height:1.6}.content{text-align:left;padding:5%;}</style>
 <!--[if lt IE 9]><script src='//cdn.jsdelivr.net/html5shiv/3.7.0/html5shiv.min.js'></script><![endif]-->
 <div class=content>
-<h1>Arthur (Ikeagold) Web-Developer</h1>
+	<h1>Arthur (Ikeagold) Web-Developer</h1>
 	<ul>
-		<li>Разработка сайтов визиток/блогов/галерей (YII, WordPress)</li>
+		<li>Разработка сайтов визиток/блогов/галерей (YII 1/2, WordPress)</li>
 		<li>Установка/настройка/доработка CMS (WordPress, OpenCart, и т.д.)</li>
 		<li>SEO (поисковая оптимизация) для любых сайтов</li>
 		<li>Поддержка сайтов/форумов(ipb)</li>
