--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <meta charset=utf-8/>
 <meta name=viewport content='width=device-width, initial-scale=1.0' />
 <script src='//use.edgefonts.net/droid-sans.js'></script>
-<style>body{text-align:center;font-family: droid-sans,sans-serif;line-height:1.4}.content{text-align:left;padding:3%;}</style>
+<style>body{text-align:center;font-family:droid-sans,sans-serif;line-height:1.4}.content{text-align:left;padding:3%;}</style>
 <!--[if lt IE 9]><script src='//cdn.jsdelivr.net/html5shiv/3.7.1/html5shiv.min.js'></script><![endif]-->
 <div class=content>
 	<h1>Arthur (Ikeagold) Web-Developer</h1>
@@ -16,5 +16,5 @@
 		<li>Применение вашего дизайна (по ТЗ или из .psd) к любому сайту (темы, шаблоны, и т.д.)</li>
 	</ul>
 	<strong>E-mail: test1@li.ru</strong><br/><br/>
-	<iframe src='http://githubbadge.appspot.com/ikeagold' style='border:0;height:142px;width:200px;overflow:hidden;' frameBorder='0'></iframe>
+	<iframe src='https://githubbadge.appspot.com/ikeagold' style='border:0;height:142px;width:200px;overflow:hidden;' frameBorder='0'></iframe>
 </div>
