--- a/index.html
+++ b/index.html
@@ -16,5 +16,5 @@
 		<li>Применение вашего дизайна (по ТЗ или из .psd) к любому сайту (темы, шаблоны, и т.д.)</li>
 	</ul>
 	<strong>E-mail: test1@li.ru</strong><br/><br/>
-	<iframe src='https://githubbadge.appspot.com/ikeagold' style='border:0;height:142px;width:200px;overflow:hidden;' frameBorder='0'></iframe>
+	<iframe src='https://githubbadge.appspot.com/ikeagold?a=0' style='border:0;height:142px;width:200px;overflow:hidden;' frameBorder='0'></iframe>
 </div>
