--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!doctype html>
 <title>Arthur (Ikeagold) Web-Developer</title>
 <meta charset=utf-8/>
-<meta name=viewport content='width=device-width, initial-scale=1.0' />
+<meta name=viewport content='width=device-width, initial-scale=1'/>
+<meta name=description content='Arthur (Ikeagold) Web-Developer'/>
+<!--<link rel=publisher href="https://plus.google.com/user">-->
 <script src='//use.edgefonts.net/droid-sans.js'></script>
 <style>body{text-align:center;font-family:droid-sans,sans-serif;line-height:1.4}.content{text-align:left;padding:3%;}</style>
 <!--[if lt IE 9]><script src='//cdn.jsdelivr.net/html5shiv/3.7.1/html5shiv.min.js'></script><![endif]-->
@@ -15,6 +17,7 @@
 		<li>Разработка мобильных приложений (Andoid/iOS) с применением: html, css, js, php, node</li>
 		<li>Применение вашего дизайна (по ТЗ или из .psd) к любому сайту (темы, шаблоны, и т.д.)</li>
 	</ul>
-	<strong>E-mail: test1@li.ru</strong><br/><br/>
+	<strong>E-mail: test1@li.ru</strong><br/>
+	<a href='https://github.com/ikeagold'><strong>Github profile</strong></a><br/>
 	<iframe src='https://githubbadge.appspot.com/ikeagold?a=0' style='border:0;height:142px;width:200px;overflow:hidden;' frameBorder='0'></iframe>
 </div>
