--- a/index.html
+++ b/index.html
@@ -9,15 +9,14 @@
 <!--[if lt IE 9]><script src='//cdn.jsdelivr.net/html5shiv/3.7.1/html5shiv.min.js'></script><![endif]-->
 <div class=content>
 	<h1>Arthur (Ikeagold) Web-Developer</h1>
-	<ul>
-		<li>Разработка сайтов визиток/блогов/галерей (YII 1/2, WordPress)</li>
-		<li>Установка/настройка/доработка CMS (WordPress, OpenCart, и т.д.)</li>
-		<li>SEO (поисковая оптимизация) для любых сайтов</li>
-		<li>Поддержка сайтов/форумов(ipb)</li>
-		<li>Разработка мобильных приложений (Andoid/iOS) с применением: html, css, js, php, node</li>
-		<li>Применение вашего дизайна (по ТЗ или из .psd) к любому сайту (темы, шаблоны, и т.д.)</li>
-	</ul>
-	<strong>E-mail: test1@li.ru</strong><br/>
-	<a href='https://github.com/ikeagold'><strong>Github profile</strong></a><br/>
-	<iframe src='https://githubbadge.appspot.com/ikeagold?a=0' style='border:0;height:142px;width:200px;overflow:hidden;' frameBorder='0'></iframe>
+	<p><strong>HTML/CSS, PHP, SQL/NoSQL, Yii Framework, AngularJS, Github</strong></p>
+	<p>Currently I'm on position of web-developer at <a href='http://flickshine.com/'>FlickShine studio</a></p>
+	<p>Have experience in work with: WordPress, OpenCart, IPB, Node.js, PhoneGap</p>
+	<p>Feel free to contact me via email <!--, twitter, skype or facebook --> for any cooperation. I reply back soon ^^</p>
+	<strong>Contact Info:</strong><br/>
+	<a href="mailto:test1@li.ru">test1@li.ru</a><br/>
+	<a href='https://github.com/ikeagold'>Github profile</a><br/>
+	<!--skype and etc--><br/>
+	<iframe src="https://githubbadge.appspot.com/ikeagold?a=0" style="border: 0;height: 142px;width: 200px;overflow: hidden;" frameBorder="0"></iframe><br/>
+	Arthur (Ikeagold) © 2014
 </div>
