--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name=description content='Arthur (Ikeagold) Web-Developer'/>
 <!--<link rel=publisher href="https://plus.google.com/user">-->
 <script src='//use.edgefonts.net/droid-sans.js'></script>
-<style>body{text-align:center;font-family:droid-sans,sans-serif;line-height:1.4}a:active,a:hover,a:link,a:visited{color:#73a9b2;text-decoration:none}.content{text-align:left;padding:2%}</style>
+<style>body{text-align:center;font-family:droid-sans,sans-serif;line-height:1.4}a:active,a:hover,a:link,a:visited{color:#73a9b2;text-decoration:none;text-shadow:1px 1px 1px #ACACAC}.content{text-align:left;padding:2%}</style>
 <!--[if lt IE 9]><script src='//cdn.jsdelivr.net/html5shiv/3.7.1/html5shiv.min.js'></script><![endif]-->
 <div class=content>
 	<h1>Arthur (Ikeagold) Web-Developer</h1>
@@ -17,6 +17,6 @@
 	<a href="mailto:test1@li.ru">test1@li.ru</a><br/>
 	<a href='https://github.com/ikeagold'>Github profile</a><br/>
 	<!--skype and etc--><br/>
-	<iframe src="https://githubbadge.appspot.com/ikeagold?a=0" style="border: 0;height: 142px;width: 200px;overflow: hidden;" frameBorder="0"></iframe>
+	<iframe src="https://githubbadge.appspot.com/ikeagold?a=0" style="border: 0;height: 142px;width: 200px;overflow: hidden;" frameBorder="0"></iframe><br/>
 	Arthur (Ikeagold) © 2014
 </div>
