--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <div class=content>
 	<h1>Arthur (Ikeagold) Web-Developer</h1>
 	<p><strong>HTML/CSS, PHP, SQL/NoSQL, Yii Framework, AngularJS, Github</strong></p>
-	<p>Currently I'm on position of web-developer at <a href='http://flickshine.com/'>FlickShine studio</a></p>
-	<p>Have experience in work with: WordPress, OpenCart, IPB, Node.js, PhoneGap</p>
-	<p>Feel free to contact me via email <!--, twitter, skype or facebook --> for any cooperation. I reply back soon ^^</p>
+	<p>Currently I'm on position of web-developer at <a href='http://flickshine.com/'>FlickShine studio</a><br/>
+	Have experience in work with: WordPress, OpenCart, IPB, Node.js, PhoneGap<br/>
+	Feel free to contact me via email <!--, twitter, skype or facebook --> for any cooperation. I reply back soon ^^</p>
 	<strong>Contact Info:</strong><br/>
 	<a href="mailto:test1@li.ru">test1@li.ru</a><br/>
 	<a href='https://github.com/ikeagold'>Github profile</a><br/>
