--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <title>Arthur (Ikeagold) Web-Developer</title>
-<meta charset=utf-8/>
+<meta charset=utf-8>
 <meta name=viewport content='width=device-width, initial-scale=1'/>
 <meta name=description content='Arthur (Ikeagold) Web-Developer'/>
 <!--<link rel=publisher href="https://plus.google.com/user">-->
