--- a/index.html
+++ b/index.html
@@ -4,19 +4,18 @@
 <meta name=viewport content='width=device-width, initial-scale=1'/>
 <meta name=description content='Arthur (Ikeagold) Web-Developer'/>
 <!--<link rel=publisher href="https://plus.google.com/user">-->
-<script src='//use.edgefonts.net/droid-sans.js'></script>
-<style>body{text-align:center;font-family:droid-sans,sans-serif;line-height:1.4}a:active,a:hover,a:link,a:visited{color:#73a9b2;text-decoration:none;text-shadow:1px 1px 1px #ACACAC}.content{text-align:left;padding:2%}h1{margin:0;font-size:1.6em}</style>
+<script src='http://use.edgefonts.net/droid-sans.js'></script>
+<style>body{text-align:center;font-family:droid-sans,sans-serif;line-height:1.4;color:#404040}a,a:active,a:hover,a:visited{color:#404040}.content{text-align:left;padding:2%}h1{margin:0;font-size:1.6em}</style>
+<link rel=stylesheet href='http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css'/>
 <!--[if lt IE 9]><script src='//cdn.jsdelivr.net/html5shiv/3.7.1/html5shiv.min.js'></script><![endif]-->
 <div class=content>
-	<h1>Arthur (Ikeagold) Web-Developer</h1>
+	<h1>Arthur (Ikeagold) Web-Developer <i class='fa fa-code fa-lg'></i></h1>
 	<p><strong>HTML/CSS, PHP, SQL/NoSQL, Yii Framework, AngularJS, Github</strong></p>
-	<p>Currently I'm on position of web-developer at <a href='http://flickshine.com/'>FlickShine studio</a><br/>
-	Have experience in work with: WordPress, OpenCart, IPB, Node.js, PhoneGap<br/>
-	Feel free to contact me via email <!--, twitter, skype or facebook --> for any cooperation. I reply back soon ^^</p>
+	<p>I am currently a web developer in the <a href='http://flickshine.com/'>FlickShine</a> studio.<br/>
+	Have experience in work with: WordPress, OpenCart, IPB, Node.js, PhoneGap.<br/>
+	Feel free to contact me via email <!-- , twitter, skype or facebook --> for any cooperation. I reply back soon ^^</p>
 	<strong>Contact Info:</strong><br/>
-	<a href="mailto:test1@li.ru">test1@li.ru</a><br/>
-	<a href='https://github.com/ikeagold'>Github profile</a><br/>
-	<!--skype and etc--><br/>
-	<iframe src="https://githubbadge.appspot.com/ikeagold?a=0" style="border: 0;height: 142px;width: 200px;overflow: hidden;" frameBorder="0"></iframe><br/>
+	<a href='mailto:test1@li.ru'><i class='fa fa-envelope-square fa-2x'></i></a> <a href='https://github.com/ikeagold'><i class='fa fa-git-square fa-2x'></i></a><br/>
+	<!-- skype, etc --><br/>
 	Arthur (Ikeagold) © 2014
 </div>
