--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <meta name=viewport content='width=device-width, initial-scale=1'/>
 <meta name=description content='Arthur (Ikeagold) Web-Developer'/>
 <!--<link rel=publisher href="https://plus.google.com/user">-->
-<script src='http://use.edgefonts.net/droid-sans.js'></script>
+<script src='https://use.edgefonts.net/droid-sans.js'></script>
 <style>body{text-align:center;font-family:droid-sans,sans-serif;line-height:1.4;color:#404040}a,a:active,a:hover,a:visited{color:#404040}.content{text-align:left;padding:2%}h1{margin:0;font-size:1.6em}</style>
-<link rel=stylesheet href='http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css'/>
+<link rel=stylesheet href='https://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css'/>
 <!--[if lt IE 9]><script src='//cdn.jsdelivr.net/html5shiv/3.7.1/html5shiv.min.js'></script><![endif]-->
 <div class=content>
 	<h1>Arthur (Ikeagold) Web-Developer <i class='fa fa-code fa-lg'></i></h1>
