--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 	<h1>Arthur (Ikeagold) Web-Developer <i class='fa fa-code fa-lg'></i></h1>
 	<p><strong>HTML/CSS, PHP, SQL/NoSQL, Yii Framework, AngularJS, Github</strong></p>
 	<p>I am currently a web developer in the <a href='http://flickshine.com/'>FlickShine</a> studio.<br/>
-	Have experience in work with: WordPress, OpenCart, IPB, Node.js, PhoneGap.<br/>
-	Feel free to contact me via email <!-- , twitter, skype or facebook --> for any cooperation. I reply back soon ^^</p>
+	Have experience with: WordPress, OpenCart, IPB, Node.js, PhoneGap.<br/>
+	Feel free to contact me via email <!-- , twitter, skype or facebook -->for any cooperation. I reply back soon ^^</p>
 	<strong>Contact Info:</strong><br/>
 	<a href='mailto:test1@li.ru'><i class='fa fa-envelope-square fa-2x'></i></a> <a href='https://github.com/ikeagold'><i class='fa fa-git-square fa-2x'></i></a><br/>
-	<!-- skype, etc --><br/>
+	<!-- skype, etc <br/> -->
 	Arthur (Ikeagold) © 2014
 </div>
