--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 <link rel=stylesheet href='//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css'/>
 <!--[if lt IE 9]><script src='//cdn.jsdelivr.net/html5shiv/3.7.1/html5shiv.min.js'></script><![endif]-->
 <div class=content>
-	<h1>Arthur (Ikeagold) Web-Developer <i class='fa fa-code fa-lg'></i></h1>
+	<h1>Arthur (Ikeagold) <i class='fa fa-code fa-lg'></i> Web-Developer</h1>
 	<p><strong>HTML/CSS, PHP, SQL/NoSQL, Yii Framework, AngularJS, Github</strong></p>
 	<p>I am currently a web developer in the <a href='http://flickshine.com/'>FlickShine</a> studio.<br/>
 	Have experience with: WordPress, OpenCart, IPB, Node.js, PhoneGap.<br/>
 	Feel free to contact me via email <!-- , twitter, skype or facebook -->for any cooperation. I reply back soon ^^</p>
 	<strong>Contact Info:</strong><br/>
 	<a href='mailto:test1@li.ru'><i class='fa fa-envelope-square fa-2x'></i></a> <a href='https://github.com/ikeagold'><i class='fa fa-git-square fa-2x'></i></a><br/>
-	<!-- skype, etc <br/> -->
+	<!-- skype, etc --><br/>
 	Arthur (Ikeagold) © 2014
 </div>
