--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <title>Arthur (Ikeagold) Web-Developer</title>
 <meta charset=utf-8>
 <meta name=viewport content='width=device-width, initial-scale=1'/>
@@ -7,15 +7,13 @@
 <style>body{text-align:center;font-family:droid-sans,sans-serif;line-height:1.4;color:#404040}a,a:active,a:hover,a:visited{color:#404040}.content{text-align:left;padding:2%}h1{margin:0;font-size:1.6em}</style>
 <!--[if lt IE 9]><script src='//cdn.jsdelivr.net/html5shiv/3.7.1/html5shiv.min.js'></script><![endif]-->
 <div class=content>
-	<h1>Arthur (Ikeagold) <i class='fa fa-code fa-lg'></i> Web-Developer</h1>
-	<p><strong>HTML/CSS, PHP, SQL/NoSQL, Yii Framework, AngularJS, Github</strong></p>
+	<h1>Arthur (Ikeagold) &lt;/&gt; Web-Developer</h1>
+	<p><strong>HTML/CSS, PHP, SQL, Yii</strong></p>
 	<p>I am currently a web developer in the <a href='http://flickshine.com/'>FlickShine</a> studio.<br/>
-	Have experience with: WordPress, OpenCart, IPB, Node.js, PhoneGap.<br/>
-	Feel free to contact me via email <!-- , twitter, skype or facebook -->for any cooperation. I reply back soon ^^</p>
+	Have experience with: AngularJS, WordPress, OpenCart, IPB, Node.js, PhoneGap, Nginx.<br/>
+	Feel free to contact me via email <!--or skype-->for any cooperation. I reply back soon ^^</p>
 	<strong>Contact Info:</strong><br/>
-	<a href='mailto:test1@li.ru'><i class='fa fa-envelope-square fa-2x'></i></a> <a href='https://github.com/ikeagold'><i class='fa fa-git-square fa-2x'></i></a><br/>
-	<!-- skype, etc --><br/>
+	<a href='mailto:test1@li.ru'><img alt=gmail src='//mail.google.com/mail/u/0/images/favicon2.ico'/></a> <a href='http://github.com/ikeagold'><img alt=github src='//assets-cdn.github.com/favicon.ico'/></a> <a href='http://toster.ru/user/alasecond'><img alt=toster src='//toster.ru/favicon.ico'/></a><br/><br/><!--skype-->
 	Arthur (Ikeagold) © 2014
 </div>
-<link rel=stylesheet href='//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css'/>
 <script src='//use.edgefonts.net/droid-sans.js'></script>
