--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <meta charset=utf-8>
 <meta name=viewport content='width=device-width, initial-scale=1'/>
 <meta name=description content='Arthur (Ikeagold) Web-Developer'/>
-<!--<link rel=publisher href="https://plus.google.com/user">-->
-<style>body{text-align:center;font-family:droid-sans,sans-serif;line-height:1.4;color:#061732}a,a:active,a:hover,a:visited{color:#061732}.content{text-align:left;padding:2%}h1{margin:0;font-size:1.6em}</style>
+<!--<link rel=publisher href='https://plus.google.com/user'/>-->
+<style>body{text-align:center;font-family:arial,sans-serif;line-height:1.4;color:#061732}a,a:active,a:hover,a:visited{color:#061732}.content{text-align:left;padding:2%}h1{margin:0;font-size:1.6em}</style>
 <!--[if lt IE 9]><script src='//cdn.jsdelivr.net/html5shiv/3.7.2/html5shiv.min.js'></script><![endif]-->
 <div class=content>
 	<h1>Arthur (Ikeagold) &lt;/&gt; Web-Developer</h1>
@@ -16,4 +16,3 @@
 	<a href='mailto:test1@li.ru'><img alt=gmail src='//mail.google.com/mail/u/0/images/favicon2.ico'/></a> <a href='http://github.com/ikeagold'><img alt=github src='//assets-cdn.github.com/favicon.ico'/></a> <a href='http://toster.ru/user/alasecond'><img alt=toster src='//toster.ru/favicon.ico'/></a><br/><!--skype-->
 	Arthur (Ikeagold) © 2014
 </div>
-<script src='//use.edgefonts.net/droid-sans.js'></script>
