--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
 <meta charset=utf-8>
 <meta name=viewport content='width=device-width, initial-scale=1'/>
 <meta name=description content='Arthur (Ikeagold) Web-Developer'/>
-<!--<link rel=publisher href='https://plus.google.com/user'/>-->
 <style>body{font-family:arial,sans-serif;color:#061732;text-align:left;padding:2%}h1{margin:0;font-size:1.6em}</style>
 <!--[if lt IE 9]><script src='//cdn.jsdelivr.net/html5shiv/3.7.2/html5shiv.min.js'></script><![endif]-->
 <h1>Arthur (Ikeagold) &lt;/&gt; Web-Developer</h1>
-<p><strong>HTML/CSS, PHP, SQL, Yii</strong></p>
-<p>I am currently a web developer in the <a href='http://flickshine.com/'>FlickShine</a> studio.<br/>
-Have experience with: AngularJS, WordPress, OpenCart, IPB, Node.js, PhoneGap, Nginx.<br/>
+<p><strong>HTML/JS/CSS, PHP, SQL, Yii</strong></p>
+<p>I am currently a web developer in the <a href='http://flickshine.com/'>FlickShine</a> studio<br/>
+Have experience with: AngularJS, NodeJS, PhoneGap, Nginx, WordPress, OpenCart<br/>
 Feel free to contact me via email <!--or skype-->for any cooperation. I reply back soon ^^</p>
 <strong>Contact Info:</strong><br/>
 <a href='mailto:test1@li.ru'><img alt=gmail src='//mail.google.com/mail/u/0/images/favicon2.ico'/></a> <a href='http://github.com/ikeagold'><img alt=github src='//assets-cdn.github.com/favicon.ico'/></a> <a href='http://toster.ru/user/alasecond'><img alt=toster src='//toster.ru/favicon.ico'/></a><br/><!--skype-->
