--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta name=viewport content='width=device-width, initial-scale=1'/>
 <meta name=description content='Arthur (Ikeagold) Web-Developer'/>
 <style>body{font-family:arial,sans-serif;color:#061732;text-align:left;padding:2%}h1{margin:0;font-size:1.6em}</style>
-<!--[if lt IE 9]><script src='//cdn.jsdelivr.net/html5shiv/3.7.2/html5shiv.min.js'></script><![endif]-->
+<!--[if lt IE 9]><script src='//cdn.jsdelivr.net/html5shiv/latest/html5shiv.min.js'></script><![endif]-->
 <h1>Arthur (Ikeagold) &lt;/&gt; Web-Developer</h1>
 <p><strong>HTML/JS/CSS, PHP, SQL, Yii</strong></p>
 <p>I am currently a web developer in the <a href='http://flickshine.com/'>FlickShine</a> studio<br/>
