--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<title>Arthur (Ikeagold) Web-Developer</title>
+<title>Arthur &lt;Ikeagold/&gt; Web-Developer</title>
 <meta charset=utf-8>
 <meta name=viewport content='width=device-width, initial-scale=1'/>
 <meta name=description content='Arthur (Ikeagold) Web-Developer'/>
-<style>body{font-family:arial,sans-serif;color:#061732;text-align:left;padding:2%}h1{margin:0;font-size:1.6em}</style>
+<style>body{font-family:arial,sans-serif;color:#061732;text-align:left;padding:2%}h1{margin:0;font-size:1.6em;color:#E93345;text-shadow: 1px 1px 0px #CD2040;}</style>
 <!--[if lt IE 9]><script src='//cdn.jsdelivr.net/html5shiv/latest/html5shiv.min.js'></script><![endif]-->
-<h1>Arthur (Ikeagold) &lt;/&gt; Web-Developer</h1>
+<h1>Arthur &lt;Ikeagold/&gt; Web-Developer</h1>
 <p><strong>HTML/JS/CSS, PHP, SQL, Yii</strong></p>
 <p>I am currently a web developer in the <a href='http://flickshine.com/'>FlickShine</a> studio<br/>
 Have experience with: AngularJS, NodeJS, PhoneGap, Nginx, WordPress, OpenCart<br/>
