--- a/index.html
+++ b/index.html
@@ -12,4 +12,4 @@ Have experience with: AngularJS, NodeJS, PhoneGap, Nginx, WordPress, OpenCart<br
 Feel free to contact me via email <!--or skype-->for any cooperation. I reply back soon ^^</p>
 <strong>Contact Info:</strong><br/>
 <a href='mailto:test1@li.ru'><img alt=gmail src='//mail.google.com/mail/u/0/images/favicon2.ico'/></a> <a href='http://github.com/ikeagold'><img alt=github src='//assets-cdn.github.com/favicon.ico'/></a> <a href='http://toster.ru/user/alasecond'><img alt=toster src='//toster.ru/favicon.ico'/></a><br/><!--skype-->
-Arthur &lt;Ikeagold/&gt; © 2014
+© Arthur &lt;Ikeagold/&gt;
