--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
-<title>Arthur &lt;Ikeagold/&gt; Web-Developer</title>
-<meta charset=utf-8>
-<meta name=viewport content='width=device-width, initial-scale=1'/>
-<meta name=description content='Arthur (Ikeagold) Web-Developer'/>
-<style>body{font-family:arial,sans-serif;color:#061732;text-align:left;padding:2%}h1{margin:0;font-size:1.6em;color:#E93345;text-shadow: 1px 1px 0px #CD2040;}</style>
-<!--[if lt IE 9]><script src='//cdn.jsdelivr.net/html5shiv/latest/html5shiv.min.js'></script><![endif]-->
-<h1>Arthur &lt;Ikeagold/&gt; Web-Developer</h1>
-<p><strong>HTML/JS/CSS, PHP, SQL, Yii</strong></p>
-<p>I am currently a web developer in the <a href='http://flickshine.com/'>FlickShine</a> studio<br/>
-Have experience with: AngularJS, NodeJS, PhoneGap, Nginx, WordPress, OpenCart<br/>
-Feel free to contact me via email <!--or skype-->for any cooperation. I reply back soon ^^</p>
-<strong>Contact Info:</strong><br/>
-<a href='mailto:test1@li.ru'><img alt=gmail src='//mail.google.com/mail/u/0/images/favicon2.ico'/></a> <a href='http://github.com/ikeagold'><img alt=github src='//assets-cdn.github.com/favicon.ico'/></a> <a href='http://toster.ru/user/alasecond'><img alt=toster src='//toster.ru/favicon.ico'/></a><br/><!--skype-->
-© Arthur &lt;Ikeagold/&gt;
+<html lang=en>
+	<title>Ikeagold Web-Developer</title>
+	<meta charset=utf-8>
+	<meta name=viewport content='width=device-width, initial-scale=1'/>
+	<meta name=description content='Ikeagold Web-Developer'/>
+	<!--[if lt IE 9]><script src='http://cdn.jsdelivr.net/html5shiv/latest/html5shiv.min.js'></script><![endif]-->
+	<h1>Ikeagold Web-Developer</h1>
+	<p><strong>HTML/JS/CSS, PHP, SQL/Redis, Yii, Laravel</strong></p>
+	<p>My name is Arthur, I am currently a web developer in the <a href='http://flickshine.com/'>FlickShine</a> studio<br/>
+	Have experience with: AngularJS, NodeJS, PhoneGap, Nginx, WordPress, OpenCart<br/>
+	Feel free to contact me via email <!--or skype-->for any cooperation. I reply back soon ^^</p>
+	<strong>Contact Info:</strong><br/>
+	<a href='http://github.com/ikeagold'><img alt=github src='http://assets-cdn.github.com/favicon.ico'/></a> <a href='http://toster.ru/user/alasecond'><img alt=toster src='http://toster.ru/favicon.ico'/></a> <img alt=gmail src='http://mail.google.com/mail/u/0/images/favicon2.ico'/> test1@<div class=hide>[REMOVETHIS]</div>li.ru<br/><!--skype-->
+	© <a href="https://plus.google.com/115456555991025584178?rel=author">Arthur Parkhisenko</a>
+	<link rel=stylesheet href='http://fonts.googleapis.com/css?family=PT+Sans'/>
+	<style>body{font-family:'PT Sans',sans-serif;color:#061732;padding:2%}h1{margin:0;font-size:1.5em;color:#E93345}.hide{display:none}</style>
+</html>
