--- a/index.html
+++ b/index.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html lang=en>
-	<title>Ikeagold Web-Developer</title>
-	<meta charset=utf-8>
-	<meta name=viewport content='width=device-width, initial-scale=1'/>
-	<meta name=description content='Ikeagold Web-Developer'/>
-	<!--[if lt IE 9]><script src='http://cdn.jsdelivr.net/html5shiv/latest/html5shiv.min.js'></script><![endif]-->
-	<h1>Ikeagold Web-Developer</h1>
-	<p><strong>HTML/JS/CSS, PHP, SQL/Redis, Yii, Laravel</strong></p>
-	<p>My name is Arthur, I am currently a web developer in the <a href='http://flickshine.com/'>FlickShine</a> studio<br/>
-	Have experience with: AngularJS, NodeJS, PhoneGap, Nginx, WordPress, OpenCart<br/>
-	Feel free to contact me via email <!--or skype-->for any cooperation. I reply back soon ^^</p>
-	<strong>Contact Info:</strong><br/>
-	<a href='http://github.com/ikeagold'><img alt=github src='http://assets-cdn.github.com/favicon.ico'/></a> <a href='http://toster.ru/user/alasecond'><img alt=toster src='http://toster.ru/favicon.ico'/></a> <img alt=gmail src='http://mail.google.com/mail/u/0/images/favicon2.ico'/> test1@<div class=hide>[REMOVETHIS]</div>li.ru<br/><!--skype-->
-	© <a href="https://plus.google.com/115456555991025584178?rel=author">Arthur Parkhisenko</a>
-	<link rel=stylesheet href='http://fonts.googleapis.com/css?family=PT+Sans'/>
-	<style>body{font-family:'PT Sans',sans-serif;color:#061732;padding:2%}h1{margin:0;font-size:1.5em;color:#E93345}.hide{display:none}</style>
+	<head>
+		<title>Ikeagold Web-Developer</title>
+		<meta charset=utf-8>
+		<meta name=viewport content='width=device-width, initial-scale=1'/>
+		<meta name=description content='Ikeagold Web-Developer'/>
+		<link rel=stylesheet href='http://fonts.googleapis.com/css?family=PT+Sans'/>
+		<style>body{font-family:'PT Sans',sans-serif;color:#061732;padding:2%}h1{margin:0;font-size:1.5em;color:#E93345}.hide{display:none}</style>
+		<!--[if lt IE 9]><script src='http://cdn.jsdelivr.net/html5shiv/latest/html5shiv.min.js'></script><![endif]-->
+	</head>
+	<body>
+		<h1>Ikeagold Web-Developer</h1>
+		<p><strong>HTML/JS/CSS, PHP, SQL/Redis, Yii, Laravel</strong></p>
+		<p>My name is Arthur, I am currently a web developer in the <a href='http://flickshine.com/'>FlickShine</a> studio<br/>
+		Have experience with: AngularJS, NodeJS, PhoneGap, Nginx, WordPress, OpenCart<br/>
+		Feel free to contact me via email <!--or skype-->for any cooperation. I reply back soon ^^</p>
+		<strong>Contact Info:</strong><br/>
+		<a href='http://github.com/ikeagold'><img alt=github src='http://assets-cdn.github.com/favicon.ico'/></a> <a href='http://toster.ru/user/alasecond'><img alt=toster src='http://toster.ru/favicon.ico'/></a> <img alt=gmail src='http://mail.google.com/mail/u/0/images/favicon2.ico'/> test1@<div class=hide>[REMOVETHIS]</div>li.ru<br/><!--skype-->
+		© <a href="https://plus.google.com/115456555991025584178?rel=author">Arthur Parkhisenko</a>
+	</body>
 </html>
