--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	Have experience with: AngularJS, NodeJS, PhoneGap, Nginx, WordPress, OpenCart<br/>
 	Feel free to contact me via email <!--or skype-->for any cooperation. I reply back soon ^^</p>
 	<strong>Contact Info:</strong><br/>
-	<a href="https://github.com/ikeagold"><img alt="github" src="https://assets-cdn.github.com/favicon.ico"/></a> <a href="http://toster.ru/user/alasecond"><img alt="toster" src="https://toster.ru/favicon.ico"/></a> <img alt="gmail" src="https://mail.google.com/mail/u/0/images/favicon2.ico"/> test1@<div class="hide">[REMOVETHIS]</div>li.ru<br/><!--skype-->
+	<a href="https://github.com/ikeagold"><img alt="github" src="https://assets-cdn.github.com/favicon.ico"/></a> <a href="http://toster.ru/user/alasecond"><img alt="toster" src="https://toster.ru/favicon.ico"/></a> <img alt="gmail" src="https://ssl.gstatic.com/ui/v1/icons/mail/images/favicon2.ico"/> test1@<div class="hide">[REMOVETHIS]</div>li.ru<br/><!--skype-->
 	© <a href="https://plus.google.com/+АртурПархисенко?rel=author">Arthur Parkhisenko</a>
 	<script>WebFontConfig={google:{families:["PT+Sans::latin"]}},function(){var e=document.createElement("script");e.src=("https:"==document.location.protocol?"https":"http")+"://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js",e.type="text/javascript",e.async="true";var t=document.getElementsByTagName("script")[0];t.parentNode.insertBefore(e,t)}(),function(e,t,a,n,o,c,s){e.GoogleAnalyticsObject=o,e[o]=e[o]||function(){(e[o].q=e[o].q||[]).push(arguments)},e[o].l=1*new Date,c=t.createElement(a),s=t.getElementsByTagName(a)[0],c.async=1,c.src=n,s.parentNode.insertBefore(c,s)}(window,document,"script","//www.google-analytics.com/analytics.js","ga"),ga("create","UA-36592065-4","auto"),ga("send","pageview");</script>
 </html>
