--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 	<title>Ikeagold Web-Developer</title>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1"/>
-	<meta name="description" content="Ikeagold Web-Developer"/>
-	<style>body{font-family:'PT Sans',sans-serif;color:#061732;padding:2%}h1{margin:0;font-size:1.5em;color:#E93345}.hide{display:none}</style>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<meta name="description" content="Ikeagold Web-Developer" />
+	<style>body{font-family:verdana;color:#061732;padding:2%}h1{margin:0;font-size:1.5em;color:#E93345}.hide{display:none}</style>
 	<!--[if lt IE 9]><script src='http://cdn.jsdelivr.net/html5shiv/latest/html5shiv.min.js'></script><![endif]-->
 	<h1>Ikeagold Web-Developer</h1>
 	<p><strong>HTML/JS/CSS, PHP, SQL/Redis, Yii, Laravel</strong></p>
@@ -14,5 +14,5 @@
 	<strong>Contact Info:</strong><br/>
 	<a href="https://github.com/ikeagold"><img alt="github" src="https://assets-cdn.github.com/favicon.ico"/></a> <a href="http://toster.ru/user/alasecond"><img alt="toster" src="https://toster.ru/favicon.ico"/></a> <img alt="gmail" src="https://ssl.gstatic.com/ui/v1/icons/mail/images/favicon2.ico"/> test1@<div class="hide">[REMOVETHIS]</div>li.ru<br/><!--skype-->
 	© <a href="https://plus.google.com/+АртурПархисенко?rel=author">Arthur Parkhisenko</a>
-	<script>WebFontConfig={google:{families:["PT+Sans::latin"]}},function(){var e=document.createElement("script");e.src=("https:"==document.location.protocol?"https":"http")+"://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js",e.type="text/javascript",e.async="true";var t=document.getElementsByTagName("script")[0];t.parentNode.insertBefore(e,t)}(),function(e,t,a,n,o,c,s){e.GoogleAnalyticsObject=o,e[o]=e[o]||function(){(e[o].q=e[o].q||[]).push(arguments)},e[o].l=1*new Date,c=t.createElement(a),s=t.getElementsByTagName(a)[0],c.async=1,c.src=n,s.parentNode.insertBefore(c,s)}(window,document,"script","//www.google-analytics.com/analytics.js","ga"),ga("create","UA-36592065-4","auto"),ga("send","pageview");</script>
+	<script>!function(e,a,t,n,c,o,s){e.GoogleAnalyticsObject=c,e[c]=e[c]||function(){(e[c].q=e[c].q||[]).push(arguments);},e[c].l=1*new Date,o=a.createElement(t),s=a.getElementsByTagName(t)[0],o.async=1,o.src=n,s.parentNode.insertBefore(o,s);}(window,document,"script","//www.google-analytics.com/analytics.js","ga"),ga("create","UA-36592065-4","auto"),ga("send","pageview");</script>
 </html>
