--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 	<style>body{font-family:verdana;color:#061732;padding:2%}h1{margin:0;font-size:1.5em;color:#E93345}.hide{display:none}</style>
 	<!--[if lt IE 9]><script src='http://cdn.jsdelivr.net/html5shiv/latest/html5shiv.min.js'></script><![endif]-->
 	<h1>Ikeagold Web-Developer</h1>
-	<p><strong>HTML/JS/CSS, PHP, SQL/Redis, Yii, Laravel</strong></p>
-	<p>My name is Arthur, I am currently a web developer in the <a href="http://flickshine.com/">FlickShine</a> studio<br/>
-	Have experience with: AngularJS, NodeJS, PhoneGap, Nginx, WordPress, OpenCart<br/>
+	<p><strong>HTML/JS/CSS, PHP, AngularJS, Phonegap, SQL/Redis, Yii, Laravel</strong></p>
+	<p>My name is Arthur, I am currently a web developer in the <a href="http://flickshine.com/" target="_blank">FlickShine</a> studio (<a href="https://github.com/FlickShine" target="_blank">GitHub</a>)<br/>
+	Have experience with: Ruby/RoR, NodeJS, Nginx, WordPress, OpenCart<br/>
 	Feel free to contact me via email <!--or skype-->for any cooperation. I reply back soon ^^</p>
 	<strong>Contact Info:</strong><br/>
 	<a href="https://github.com/ikeagold"><img alt="github" src="https://assets-cdn.github.com/favicon.ico"/></a> <a href="http://toster.ru/user/alasecond"><img alt="toster" src="https://toster.ru/favicon.ico"/></a> <img alt="gmail" src="https://ssl.gstatic.com/ui/v1/icons/mail/images/favicon2.ico"/> test1@<div class="hide">[REMOVETHIS]</div>li.ru<br/><!--skype-->
