--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<style>body{font-family:verdana;color:#061732;padding:2%}h1{margin:0;font-size:1.5em;color:#E93345}.hide{display:none}</style>
 	<!--[if lt IE 9]><script src='http://cdn.jsdelivr.net/html5shiv/latest/html5shiv.min.js'></script><![endif]-->
 	<h1>Ikeagold Web-Developer</h1>
-	<p><strong>HTML/JS/CSS, PHP, AngularJS, Phonegap, SQL/Redis, Yii, Laravel</strong></p>
+	<p><strong>HTML/JS/CSS, PHP, AngularJS, Phonegap, SQL/MongoDB, Yii, Laravel</strong></p>
 	<p>My name is Arthur, I am currently a web developer in the <a href="http://flickshine.com/" target="_blank">FlickShine</a> studio (<a href="https://github.com/FlickShine" target="_blank">GitHub</a>)<br/>
 	Have experience with: Ruby/RoR, NodeJS, Nginx, WordPress, OpenCart<br/>
 	Feel free to contact me via email <!--or skype-->for any cooperation. I reply back soon ^^</p>
