--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 <!doctype html>
 <html lang="en">
-	<title>Ikeagold Web-Developer</title>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Ikeagold Web-Developer">
-	<style>body{font-family:'Roboto Condensed',sans-serif;color:#061732;padding:2%;-webkit-font-smoothing:antialiased;text-rendering:optimizeLegibility}h1{margin:0;font-size:1.5em;color:#e93345}.hide{display:none}p{line-height:1.4}a,a:visited,a:hover{text-decoration:none}a:nth-of-type(1){color:#e85232}a:nth-of-type(2),a:nth-of-type(3){color:black}</style>
-	<!--[if lt IE 9]><script src='http://cdn.jsdelivr.net/html5shiv/latest/html5shiv.min.js'></script><![endif]-->
-	<h1>Arthur (Ikeagold) Web-Developer</h1>
-	<p><strong>HTML/JS/CSS, PHP, AngularJS, PhoneGap, SQL/MongoDB, Yii, NodeJS</strong></p>
-	<p>My name is Arthur, I am currently a web developer in the <a href="http://flickshine.com/" target="_blank">FlickShine</a> studio (<a href="https://github.com/FlickShine" target="_blank">GitHub</a>).<br/>
-	Have experience with: Ruby/RoR, Laravel, Nginx, WordPress, OpenCart.<br/>
-	Feel free to contact me via email <!--or skype-->for any cooperation. I reply back soon ^^</p>
-	<strong>Contact Info:</strong><br/>
-	<a href="https://github.com/ikeagold"><img alt="github" src="https://assets-cdn.github.com/favicon.ico"/></a> <a href="http://toster.ru/user/alasecond"><img alt="toster" src="https://toster.ru/favicon.ico"/></a> <img alt="gmail" src="https://ssl.gstatic.com/ui/v1/icons/mail/images/favicon2.ico"/> test1@<div class="hide">[REMOVETHIS]</div>li.ru<br/><br/><!--skype-->
-	© <a href="https://plus.google.com/+АртурПархисенко?rel=author">Arthur Parkhisenko</a>
-	<script>!function(e,t,a,o,n,c,s){e.GoogleAnalyticsObject=n,e[n]=e[n]||function(){(e[n].q=e[n].q||[]).push(arguments)},e[n].l=1*new Date,c=t.createElement(a),s=t.getElementsByTagName(a)[0],c.async=1,c.src=o,s.parentNode.insertBefore(c,s)}(window,document,"script","//www.google-analytics.com/analytics.js","ga"),ga("create","UA-36592065-4","auto"),ga("send","pageview");var WebFontConfig={google:{families:["Roboto+Condensed:700,300,400:latin"]}};!function(){var e=document.createElement("script");e.src=("https:"==document.location.protocol?"https":"http")+"://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js",e.type="text/javascript",e.async="true";var t=document.getElementsByTagName("script")[0];t.parentNode.insertBefore(e,t)}();</script>
+    <title>Ikeagold Web-Developer</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Ikeagold Web-Developer">
+    <style>body{font-family:'Roboto Condensed',sans-serif;font-weight:300;color:#061732;padding:2%;-webkit-font-smoothing:antialiased;text-rendering:optimizeLegibility}h1{margin:0;font-size:1.5em;color:#e93345}address{display:inline}p{line-height:1.4}a,a:visited,a:hover{text-decoration:none;color:black;font-weight:400}.fs{color:#e85232}</style>
+    <!--[if lt IE 9]><script src='http://cdn.jsdelivr.net/html5shiv/latest/html5shiv.min.js'></script><![endif]-->
+    <h1>Arthur (Ikeagold) Web-Developer</h1>
+    <p><strong>HTML/JS/CSS, PHP, AngularJS, PhoneGap, SQL/MongoDB, Yii, NodeJS</strong></p>
+    <p>My name is Arthur, I am currently a web developer in the <a class="fs" href="http://flickshine.com/" target="_blank">FlickShine</a> studio (<a href="https://github.com/FlickShine" target="_blank">GitHub</a>).<br/>
+    Have experience with: Ruby/RoR, Laravel, Nginx, WordPress, OpenCart.<br/>
+    Feel free to contact me via email
+    <!--or skype-->for any cooperation. I reply back soon ^^</p>
+    Profiles: <a href="https://github.com/ikeagold">github.com</a>, <a href="http://toster.ru/user/alasecond">toster.ru</a><br/>
+    Inbox: <address><a href="mailto:test1@li.ru">test1@li.ru</a></address><br/><br/>
+    © <a href="https://plus.google.com/+АртурПархисенко?rel=author">Arthur Parkhisenko</a>
+    <script>!function(e,t,a,o,n,c,s){e.GoogleAnalyticsObject=n,e[n]=e[n]||function(){(e[n].q=e[n].q||[]).push(arguments)},e[n].l=1*new Date,c=t.createElement(a),s=t.getElementsByTagName(a)[0],c.async=1,c.src=o,s.parentNode.insertBefore(c,s)}(window,document,"script","//www.google-analytics.com/analytics.js","ga"),ga("create","UA-36592065-4","auto"),ga("send","pageview");var WebFontConfig={google:{families:["Roboto+Condensed:700,300,400:latin"]}};!function(){var e=document.createElement("script");e.src=("https:"==document.location.protocol?"https":"http")+"://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js",e.type="text/javascript",e.async="true";var t=document.getElementsByTagName("script")[0];t.parentNode.insertBefore(e,t)}();</script>
 </html>
