--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Ikeagold Web-Developer">
+    <meta name="HandheldFriendly" content="True">
+    <meta name="MobileOptimized" content="320">
     <style>body{font-family:'Roboto Condensed',sans-serif;font-weight:300;color:#454545;padding:2%;-webkit-font-smoothing:antialiased;text-rendering:optimizeLegibility}h1{margin:0;font-size:1.5em}address{display:inline}p{line-height:1.4}a,a:visited,a:hover{text-decoration:none;color:#454545;font-weight:400}</style>
     <!--[if lt IE 9]><script src='http://cdn.jsdelivr.net/html5shiv/latest/html5shiv.min.js'></script><![endif]-->
     <h1>Arthur (Ikeagold) Web-Developer</h1>
