description typo and author meta

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
     <title>Ikeagold Web-Developer</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Ikeagold Web-Developer">
+    <meta name="description" content="Ikeagold Web-Developer. I create custom mobile-applications and websites.">
     <meta name="keywords" content="Ikeagold, Arthur Parkhisenko, FlickShine, flickshine.com, IT, mobile, app, applications, responsive, adaptive, websites">
-    <meta name="Description" content="I create custom mobile-applications and websites.">
+    <meta name="author" content="Arthur Parkhisenko">
     <meta name="HandheldFriendly" content="True">
     <meta name="MobileOptimized" content="320">
     <link rel="canonical" href="https://ikeagold.github.io/">
