--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <p>My name is Arthur, I am currently a web-developer in the <a href="http://flickshine.com/" target="_blank">FlickShine</a> studio (<a href="https://github.com/FlickShine" target="_blank">GitHub</a>).
     <br/>Have experience with: Ruby/RoR, Laravel, Nginx, WordPress, OpenCart.
     <br/>Feel free to contact me via email <!--or skype-->for any cooperation. I reply back soon ^^</p>
-    Contact: <address><a href="mailto:test1@li.ru?subject=github.io">Mail</a></address>, <a href="https://github.com/ikeagold">GitHub</a>, <a href="http://toster.ru/user/alasecond">Toster</a>
+    Contact: <address><a href="mailto:ikeagold@gmail.com?subject=github.io">Mail</a></address>, <a href="https://github.com/ikeagold">GitHub</a>, <a href="http://toster.ru/user/alasecond">Toster</a>
     <br/><br/>© <a href="https://plus.google.com/+АртурПархисенко?rel=author">Arthur Parkhisenko</a>
     <script>!function(e,t,a,o,n,c,s){e.GoogleAnalyticsObject=n,e[n]=e[n]||function(){(e[n].q=e[n].q||[]).push(arguments)},e[n].l=1*new Date,c=t.createElement(a),s=t.getElementsByTagName(a)[0],c.async=1,c.src=o,s.parentNode.insertBefore(c,s)}(window,document,"script","//www.google-analytics.com/analytics.js","ga"),ga("create","UA-36592065-4","auto"),ga("send","pageview");var WebFontConfig={google:{families:["Roboto+Condensed:700,300,400:latin"]}};!function(){var e=document.createElement("script");e.src=("https:"==document.location.protocol?"https":"http")+"://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js",e.type="text/javascript",e.async="true";var t=document.getElementsByTagName("script")[0];t.parentNode.insertBefore(e,t)}();</script>
 </html>
