google-site-verification

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="author" content="Arthur Parkhisenko">
     <meta name="HandheldFriendly" content="True">
     <meta name="MobileOptimized" content="320">
+    <meta name="google-site-verification" content="RZMrzKt4gfp4dy-KC8JW6KFzKkN4h5iwPGMEWbGtoDo">
     <meta property="og:site_name" content="Ikeagold Web-Developer">
     <meta property="og:type" content="website">
     <meta property="og:locale" content="en">
